--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,5 @@
         {% endfor %}
     {% endif %}
 
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/styles.css">
 </head>
