--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -1,8 +1,8 @@
 <ul>
     {% for author in site.authors %}
         <li>
-            <img class="img-author" src="{{ site.url }}/assets/images/{{ author.image }}">
-            <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
+            <img class="img-author" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ author.image }}">
+            <h2><a href="{{ site.baseurl }}{{ author.url }}">{{ author.name }}</a></h2>
             <h3>{{ author.position }}</h3>
             <p>{{ author.content | markdownify }}</p>
         </li>
