--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
     {% if site.logo %}
-    <a href="{{ site.url }}"><img src="{{ site.url }}/assets/images/{{ site.logo }}"></a>
+    <a href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.logo }}"></a>
     {% else %}
         <a href="{{ site.url }}">{{ site.title }}</a>
     {% endif %}
