Tags fixed; Author name propagation fixed

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<img class="img-author" src="{{ site.baseurl }}/assets/images/{{ page.image }}">
 <h1>{{ page.name }}</h1>
 <h2>{{ page.position }}</h2>
 
@@ -9,7 +10,7 @@ layout: default
 
 <h2>Posts</h2>
 <ul>
-  {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+  {% assign filtered_posts = site.posts | where: 'author', page.name %}
   {% for post in filtered_posts %}
     <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
