--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
     <title>{% if page.use-site-title %}{{ site.title }}{{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="author" content="{{ site.author.name }}"/>
+    <link rel="icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.logo }}">
 
     {% if page.googlefonts %}
         {% for font in page.googlefonts %}
